fixes more bar-graph overlap

--- a/app/javascript/packs/stylesheets/analytics.scss
+++ b/app/javascript/packs/stylesheets/analytics.scss
@@ -142,3 +142,7 @@
     border-radius: 4px !important;
   }
 }
+
+.recharts-custom-tick {
+  font-size: .9rem;
+}
